@@ -1,3 +1,10 @@
+2008-10-08  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/labels/IntervalCategoryToolTipGenerator.java
+    (equals): New method override,
+    * source/org/jfree/chart/renderer/category/IntervalBarRenderer.java
+    (equals): New method override.
+
 2008-10-02  David Gilbert  <david.gilbert@object-refinery.com>
 
     * source/org/jfree/chart/renderer/category/BoxAndWhiskerRenderer.java
